# lab_prog_1_luisTavares

./: CMakeLists.txt  README.md  main.c
DB/: clientes.txt  produtos.txt  vendas.txt
clientes/: clientes.c
produtos/: produtos.c  produtos.h
utils/: utils.c  utils.h
vendas/: vendas.c  vendas.h
